k8s/namespaces/base/observability/thanos/virtualservice.yaml
---
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: thanos
  namespace: observability
spec:
  hosts:
    - 'thanos.${CLUSTER_SUB_DOMAIN}.${CLUSTER_DOMAIN}'
  gateways:
    - istio-system/istio-system-ingress-gateway
  http:
    - match:
        - port: 443
      route:
        - destination:
            port:
              number: 10902
            host: thanos-query-http.observability.svc.cluster.local
